tests/snapshots/test_runner__tests__compiler__transpile__array_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo<A>
  : | A => Integer
  = | _ => 123

let xs
  : [Integer]
  = [
    null.foo()
    {x: null.foo()}.x
  ]

do xs.print()

============
EXIT CODE
============
0

============
STDOUT
============
[ 123, 123 ]

============
STDERR
============
