tests/snapshots/test_runner__tests__compiler__transpile__comment_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# This is a comment
do "Hello".print()

============
EXIT CODE
============
0

============
STDOUT
============
Hello

============
STDERR
============
