tests/snapshots/test_runner__tests__compiler__transpile__comment_multiline_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
###
Who lives in a a pineapple under the sea?
Spongebob?
###
do "Hello".print()

============
EXIT CODE
============
0

============
STDOUT
============
Hello

============
STDERR
============
