tests/snapshots/test_runner__tests__compiler__transpile__diamond_dependency_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
export let (n: Int) foo: Int = n

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
