tests/snapshots/test_runner__tests__compiler__transpile__diamond_dependency_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
module (foo) = import "./diamond_dependency_1.kk"

export let bar (): Int = 2

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
