tests/snapshots/test_runner__tests__compiler__transpile__diamond_dependency_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
import {foo} from "./diamond_dependency_1.kk"

export let spam = (null: Null): Integer => 3

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
