tests/snapshots/test_runner__tests__compiler__transpile__documentation_code_snippet_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let e
  "
  Euler's number
  ${e print}
  "
  : Float
  =  2.718281828459045

entry
  e print

============
EXIT CODE
============
0

============
STDOUT
============
2.718281828459045

============
STDERR
============
