tests/snapshots/test_runner__tests__compiler__transpile__function_declaration_sugar_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let prefix (a: Integer): Integer = a

let prefix2 (a: Integer) (b: Integer): Integer = b

let (a: Integer) postfix: Integer = a

let (a: Integer) infix (b: Integer): String =
  a print;
  b print;
  'hello'

let (a: Integer) infix2 (b: Integer) (c: Integer): String =
  a print;
  b print;
  c print;
  'hello'

entry
  prefix 1 print;
  prefix2 3 4 print;
  5 postfix print;
  6 infix 7 print;
  8 infix2 9 10 print

============
EXIT CODE
============
0

============
STDOUT
============
1
4
5
6
7
'hello'
8
9
10
'hello'

============
STDERR
============
