tests/snapshots/test_runner__tests__compiler__transpile__import_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
export let show_me
  : | String => Null
  = print

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
